objects/Order_Comment__b.object
<CustomObject>
    <description>test big object</description>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order</description>
        <inlineHelpText>Order</inlineHelpText>
        <label>Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Sequence Number</description>
        <inlineHelpText>Sequence Number</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <indexes>
        <fullName>Index</fullName>
        <fields>
            <name>Product_Name__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Sequence_Number__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Index</label>
    </indexes>
    <label>Order Comment</label>
    <pluralLabel>Order Comments</pluralLabel>
</CustomObject>